--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="nav">Dashboard</div>
-        <div class="header"></div>
+        <div class="header">Header</div>
         <div class="welcome">Hi there,</div>
         <div class="dashboard">
             <div class="projects">
