--- a/index.html
+++ b/index.html
@@ -10,28 +10,94 @@
 
 <body>
     <div class="container">
-        <div class="nav">Dashboard</div>
-        <div class="header">Header</div>
+        <div class="nav">
+            <div class="title">Dashboard</div>
+            <div class="topnav">
+                <div class="menuitem">Home</div>
+                <div class="menuitem">Profile</div>
+                <div class="menuitem">Messages</div>
+                <div class="menuitem">History</div>
+                <div class="menuitem">Task</div>
+                <div class="menuitem">Communities</div>
+            </div>
+            <div class="bottomnav">
+                <div class="menuitem">Settings</div>
+                <div class="menuitem">Support</div>
+                <div class="menuitem">Privacy</div>
+            </div>
+        </div>
+        <div class="header">
+            <div class="headerleft">
+                <div class="searchicon">O-</div>
+                <div class="searchbar"></div>
+            </div>
+            <div class="headerright">
+                <div class="notifications">ding</div>
+                <div class="usericon">ICON</div>
+                <div class="username">Christopher Bogs</div>
+            </div>
+        </div>
         <div class="welcome">Hi there,</div>
         <div class="dashboard">
             <div class="projects">
-                <div class="projectcard"></div>
-                <div class="projectcard"></div>
-                <div class="projectcard"></div>
-                <div class="projectcard"></div>
-                <div class="projectcard"></div>
-                <div class="projectcard"></div>
+                <div class="project-section-title">Your Projects</div>
+                <div class="projectcard">
+                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-description">Blah blah blah</div>
+                    <div class="favorite-icon">F</div>
+                    <div class="follow-icon">O</div>
+                    <div class="share-icon">S</div>
+                </div>
+                <div class="projectcard">
+                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-description">Blah blah blah</div>
+                    <div class="favorite-icon">F</div>
+                    <div class="follow-icon">O</div>
+                    <div class="share-icon">S</div>
+                </div>
+                <div class="projectcard">
+                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-description">Blah blah blah</div>
+                    <div class="favorite-icon">F</div>
+                    <div class="follow-icon">O</div>
+                    <div class="share-icon">S</div>
+                </div>
+                <div class="projectcard">
+                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-description">Blah blah blah</div>
+                    <div class="favorite-icon">F</div>
+                    <div class="follow-icon">O</div>
+                    <div class="share-icon">S</div>
+                </div>
+                <div class="projectcard">
+                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-description">Blah blah blah</div>
+                    <div class="favorite-icon">F</div>
+                    <div class="follow-icon">O</div>
+                    <div class="share-icon">S</div>
+                </div>
+                <div class="projectcard">
+                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-description">Blah blah blah</div>
+                    <div class="favorite-icon">F</div>
+                    <div class="follow-icon">O</div>
+                    <div class="share-icon">S</div>
+                </div>
             </div>
-            <div class="announcements">
-                <div class="announcement">Site Maintenance</div>
-                <div class="announcement">Community Share Day</div>
-                <div class="announcement">Updated Privacy Policy</div>
-            </div>
-            <div class="trending">
-                <div class="trend">@tegan</div>
-                <div class="trend">@morgan</div>
-                <div class="trend">@kendall</div>
-                <div class="trend">@alex</div>
+            <div class="highlights">
+                <div class="section-title">Announcements</div>
+                <div class="announcements">
+                    <div class="announcement">Site Maintenance</div>
+                    <div class="announcement">Community Share Day</div>
+                    <div class="announcement">Updated Privacy Policy</div>
+                </div>
+                <div class="section-title">Trending</div>
+                <div class="trending">
+                    <div class="trend">@tegan</div>
+                    <div class="trend">@morgan</div>
+                    <div class="trend">@kendall</div>
+                    <div class="trend">@alex</div>
+                </div>
             </div>
         </div>
     </div>
