Incorporate icons in cards

--- a/index.html
+++ b/index.html
@@ -44,44 +44,44 @@
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon">F</div>
-                    <div class="follow-icon">O</div>
-                    <div class="share-icon">S</div>
+                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
+                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
+                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon">F</div>
-                    <div class="follow-icon">O</div>
-                    <div class="share-icon">S</div>
+                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
+                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
+                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon">F</div>
-                    <div class="follow-icon">O</div>
-                    <div class="share-icon">S</div>
+                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
+                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
+                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon">F</div>
-                    <div class="follow-icon">O</div>
-                    <div class="share-icon">S</div>
+                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
+                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
+                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon">F</div>
-                    <div class="follow-icon">O</div>
-                    <div class="share-icon">S</div>
+                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
+                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
+                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon">F</div>
-                    <div class="follow-icon">O</div>
-                    <div class="share-icon">S</div>
+                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
+                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
+                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
                 </div>
             </div>
             <div class="highlights">
