--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
         <div class="nav">
             <div class="title">Dashboard</div>
             <div class="topnav">
-                <div class="menuitem">Home</div>
-                <div class="menuitem">Profile</div>
-                <div class="menuitem">Messages</div>
-                <div class="menuitem">History</div>
-                <div class="menuitem">Task</div>
-                <div class="menuitem">Communities</div>
+                <div class="menuitem" id="home">Home</div>
+                <div class="menuitem" id="profile">Profile</div>
+                <div class="menuitem" id="messages">Messages</div>
+                <div class="menuitem" id="history">History</div>
+                <div class="menuitem" id="task">Task</div>
+                <div class="menuitem" id="communities">Communities</div>
             </div>
             <div class="bottomnav">
-                <div class="menuitem">Settings</div>
-                <div class="menuitem">Support</div>
-                <div class="menuitem">Privacy</div>
+                <div class="menuitem" id="settings">Settings</div>
+                <div class="menuitem" id="support">Support</div>
+                <div class="menuitem" id="privacy">Privacy</div>
             </div>
         </div>
         <div class="header">
             <div class="headerleft">
-                <div class="searchicon">O-</div>
+                <div class="searchicon"><img src="./icons/search.svg" height="30"></div>
                 <div class="searchbar"></div>
             </div>
             <div class="headerright">
-                <div class="notifications">ding</div>
+                <div class="notifications"><img src="./icons/notifications.svg" height="30"></div>
                 <div class="usericon">ICON</div>
                 <div class="username">Christopher Bogs</div>
             </div>
