Icon colors and position

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <div class="nav">
             <div class="title">Dashboard</div>
             <div class="topnav">
-                <div class="menuitem" id="home">Home</div>
-                <div class="menuitem" id="profile">Profile</div>
-                <div class="menuitem" id="messages">Messages</div>
-                <div class="menuitem" id="history">History</div>
-                <div class="menuitem" id="task">Task</div>
-                <div class="menuitem" id="communities">Communities</div>
+                <div class="menuitem" id="home"><img class="filter-white" src="./icons/home.svg" height="30"> Home</div>
+                <div class="menuitem" id="profile"><img class="filter-white" src="./icons/profile.svg" height="30"> Profile</div>
+                <div class="menuitem" id="messages"><img class="filter-white" src="./icons/messages.svg" height="30"> Messages</div>
+                <div class="menuitem" id="history"><img class="filter-white" src="./icons/history.svg" height="30"> History</div>
+                <div class="menuitem" id="task"><img class="filter-white" src="./icons/file-multiple.svg" height="30"> Tasks</div>
+                <div class="menuitem" id="communities"><img class="filter-white" src="./icons/communities.svg" height="30"> Communities</div>
             </div>
             <div class="bottomnav">
-                <div class="menuitem" id="settings">Settings</div>
-                <div class="menuitem" id="support">Support</div>
-                <div class="menuitem" id="privacy">Privacy</div>
+                <div class="menuitem" id="settings"><img class="filter-white" src="./icons/settings.svg" height="30"> Settings</div>
+                <div class="menuitem" id="support"><img class="filter-white" src="./icons/support.svg" height="30"> Support</div>
+                <div class="menuitem" id="privacy"><img class="filter-white" src="./icons/privacy.svg" height="30"> Privacy</div>
             </div>
         </div>
         <div class="header">
