--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
 <body>
     <div class="container">
         <div class="nav">
-            <div class="title">Dashboard</div>
+            <div class="title"><img class="filter-white" src="./icons/orbit.svg" height="50"> Dashboard</div>
             <div class="topnav">
                 <div class="menuitem" id="home"><img class="filter-white" src="./icons/home.svg" height="30"> Home</div>
-                <div class="menuitem" id="profile"><img class="filter-white" src="./icons/profile.svg" height="30"> Profile</div>
-                <div class="menuitem" id="messages"><img class="filter-white" src="./icons/messages.svg" height="30"> Messages</div>
-                <div class="menuitem" id="history"><img class="filter-white" src="./icons/history.svg" height="30"> History</div>
-                <div class="menuitem" id="task"><img class="filter-white" src="./icons/file-multiple.svg" height="30"> Tasks</div>
-                <div class="menuitem" id="communities"><img class="filter-white" src="./icons/communities.svg" height="30"> Communities</div>
+                <div class="menuitem" id="profile"><img class="filter-white" src="./icons/profile.svg" height="30">
+                    Profile</div>
+                <div class="menuitem" id="messages"><img class="filter-white" src="./icons/messages.svg" height="30">
+                    Messages</div>
+                <div class="menuitem" id="history"><img class="filter-white" src="./icons/history.svg" height="30">
+                    History</div>
+                <div class="menuitem" id="task"><img class="filter-white" src="./icons/file-multiple.svg" height="30">
+                    Tasks</div>
+                <div class="menuitem" id="communities"><img class="filter-white" src="./icons/communities.svg"
+                        height="30"> Communities</div>
             </div>
             <div class="bottomnav">
-                <div class="menuitem" id="settings"><img class="filter-white" src="./icons/settings.svg" height="30"> Settings</div>
-                <div class="menuitem" id="support"><img class="filter-white" src="./icons/support.svg" height="30"> Support</div>
-                <div class="menuitem" id="privacy"><img class="filter-white" src="./icons/privacy.svg" height="30"> Privacy</div>
+                <div class="menuitem" id="settings"><img class="filter-white" src="./icons/settings.svg" height="30">
+                    Settings</div>
+                <div class="menuitem" id="support"><img class="filter-white" src="./icons/support.svg" height="30">
+                    Support</div>
+                <div class="menuitem" id="privacy"><img class="filter-white" src="./icons/privacy.svg" height="30">
+                    Privacy</div>
             </div>
         </div>
         <div class="header">
@@ -44,44 +52,56 @@
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
-                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
-                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
+                    <div class="iconset">
+                        <img src="./icons/favorite.svg" height="30">
+                        <img src="./icons/eye-plus.svg" height="30">
+                        <img src="./icons/share.svg" height="30">
+                    </div>
                 </div>
                 <div class="projectcard">
-                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-title">Majorly Bogus Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
-                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
-                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
+                    <div class="iconset">
+                        <img src="./icons/favorite.svg" height="30">
+                        <img src="./icons/eye-plus.svg" height="30">
+                        <img src="./icons/share.svg" height="30">
+                    </div>
                 </div>
                 <div class="projectcard">
-                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-title">Kinda Nifty Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
-                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
-                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
+                    <div class="iconset">
+                        <img src="./icons/favorite.svg" height="30">
+                        <img src="./icons/eye-plus.svg" height="30">
+                        <img src="./icons/share.svg" height="30">
+                    </div>
                 </div>
                 <div class="projectcard">
-                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-title">Intensely Divisive Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
-                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
-                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
+                    <div class="iconset">
+                        <img src="./icons/favorite.svg" height="30">
+                        <img src="./icons/eye-plus.svg" height="30">
+                        <img src="./icons/share.svg" height="30">
+                    </div>
                 </div>
                 <div class="projectcard">
-                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-title">Super Mario Brothers</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
-                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
-                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
+                    <div class="iconset">
+                        <img src="./icons/favorite.svg" height="30">
+                        <img src="./icons/eye-plus.svg" height="30">
+                        <img src="./icons/share.svg" height="30">
+                    </div>
                 </div>
                 <div class="projectcard">
-                    <div class="project-title">Super Cool Project</div>
+                    <div class="project-title">Very Interesting Project</div>
                     <div class="project-description">Blah blah blah</div>
-                    <div class="favorite-icon"><img src="./icons/favorite.svg" height="30"></div>
-                    <div class="follow-icon"><img src="./icons/eye-plus.svg" height="30"></div>
-                    <div class="share-icon"><img src="./icons/share.svg" height="30"></div>
+                    <div class="iconset">
+                        <img src="./icons/favorite.svg" height="30">
+                        <img src="./icons/eye-plus.svg" height="30">
+                        <img src="./icons/share.svg" height="30">
+                    </div>
                 </div>
             </div>
             <div class="highlights">
