--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="project-section-title">Your Projects</div>
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
-                    <div class="project-description">Blah blah blah</div>
+                    <div class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur veniam iure dolore, vitae neque doloribus ex! Quas laborum nulla eum ea nesciunt aut fuga quam ratione ab est aperiam facilis, itaque, saepe sit maxime expedita iure sapiente amet et? Quas possimus aut ratione? Autem magni quaerat, veniam voluptas explicabo veritatis iste, consectetur nostrum praesentium eligendi repellat harum doloribus fugit quo alias molestiae ipsum voluptate. Architecto expedita nesciunt possimus praesentium iure aspernatur sequi, sint minima reprehenderit, consequatur, soluta eos ex facilis dolorum asperiores velit! Veniam, ipsa, perspiciatis dicta omnis perferendis corrupti ipsam, magni possimus autem libero a ex odio dolor quia!</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Majorly Bogus Project</div>
-                    <div class="project-description">Blah blah blah</div>
+                    <div class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In commodi labore debitis unde ut tempore, pariatur perferendis quas doloribus recusandae modi possimus assumenda cum quaerat saepe! Autem ratione quas porro explicabo laborum fugit illo repellat sit fugiat dolorum quod quia dicta corporis, officiis quos quae. Impedit culpa minus adipisci deleniti?</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
@@ -69,7 +69,8 @@
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Kinda Nifty Project</div>
-                    <div class="project-description">Blah blah blah</div>
+                    <div class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quas facilis et architecto nostrum inventore similique, iusto vel illum asperiores temporibus! Labore quia atque numquam in. Placeat maxime at ratione, similique distinctio asperiores, iste cupiditate ipsam minima dolorem maiores sapiente dicta aperiam. Vel vitae dolore nisi similique quisquam consequatur labore?
+                    </div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
@@ -78,7 +79,7 @@
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Intensely Divisive Project</div>
-                    <div class="project-description">Blah blah blah</div>
+                    <div class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit minus tempora inventore pariatur omnis facilis temporibus esse distinctio sequi ullam reiciendis labore maiores, unde est voluptatibus. Excepturi dolores provident minima rem delectus obcaecati consectetur dolor alias nesciunt aliquid repellendus nisi magnam facilis, possimus sint dolore maxime sunt tempore natus inventore maiores. Alias cum unde sunt eum corrupti maiores, dolorum sequi fugit nulla odit quod et ea temporibus obcaecati suscipit. Assumenda at id obcaecati ab accusantium vitae asperiores voluptatum voluptatibus, commodi amet quos tempora nostrum enim quae odit! Nulla exercitationem beatae distinctio cumque qui. Voluptatem ratione quis officiis neque, veniam ex debitis cumque laudantium nobis? Ratione optio, molestiae repudiandae doloremque modi facilis, consequatur dolor quis a odit tempora laboriosam, aliquam perspiciatis.</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
@@ -87,7 +88,7 @@
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Super Mario Brothers</div>
-                    <div class="project-description">Blah blah blah</div>
+                    <div class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aliquam non at numquam qui nobis corporis a eos necessitatibus sed distinctio ab voluptatem totam cumque, hic sint, molestiae unde sunt velit maxime! Repudiandae omnis ea repellat commodi magnam est sed mollitia excepturi maiores sit provident blanditiis aperiam, dolorum nemo cum tempora neque architecto natus minima aut. Consectetur porro cum aperiam. Culpa nisi odit, fugiat nostrum nam repellat laboriosam laborum hic itaque dicta eaque quis facilis enim dolor porro libero illo voluptatem nihil. Fuga ducimus laudantium voluptates dolor cumque amet voluptatem? Tempore molestias itaque ab nihil consequatur atque eius magnam voluptas esse. Assumenda non in neque qui nihil ad cumque voluptas.</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
@@ -96,7 +97,7 @@
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Very Interesting Project</div>
-                    <div class="project-description">Blah blah blah</div>
+                    <div class="project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, veritatis quos. Iusto excepturi praesentium debitis nam, iure similique recusandae dolor explicabo commodi expedita dignissimos asperiores assumenda, delectus veniam dicta consectetur autem eius, a consequuntur nemo quas vel accusamus quisquam non! Sit iure, cumque repellendus necessitatibus optio earum natus voluptatibus rem accusantium, porro non dignissimos, laboriosam quae? Quam, quia odio. Laborum, ad molestias? Dolorem perferendis eius nostrum consequatur, doloribus voluptas porro iste ipsum enim dolores ratione nobis necessitatibus autem cumque vero dicta fuga architecto fugit distinctio similique vel impedit. Fugiat odio nihil quis asperiores rem! Sapiente adipisci numquam molestiae dolores sit cum aliquam reprehenderit, corrupti eos? Iure dolores error itaque excepturi eligendi perferendis?</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
