--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         <div class="nav">
             <div class="title"><img class="filter-white" src="./icons/orbit.svg" height="50"> Dashboard</div>
             <div class="topnav">
-                <div class="menuitem" id="home"><img class="filter-white" src="./icons/home.svg" height="30"> Home</div>
-                <div class="menuitem" id="profile"><img class="filter-white" src="./icons/profile.svg" height="30">
-                    Profile</div>
-                <div class="menuitem" id="messages"><img class="filter-white" src="./icons/messages.svg" height="30">
-                    Messages</div>
-                <div class="menuitem" id="history"><img class="filter-white" src="./icons/history.svg" height="30">
-                    History</div>
-                <div class="menuitem" id="task"><img class="filter-white" src="./icons/file-multiple.svg" height="30">
-                    Tasks</div>
-                <div class="menuitem" id="communities"><img class="filter-white" src="./icons/communities.svg"
-                        height="30"> Communities</div>
+                <div class="menuitem" id="home"><a href="#"><img class="filter-white" src="./icons/home.svg" height="30"> Home</a></div>
+                <div class="menuitem" id="profile"><a href="#"><img class="filter-white" src="./icons/profile.svg" height="30">
+                    Profile</a></div>
+                <div class="menuitem" id="messages"><a href="#"><img class="filter-white" src="./icons/messages.svg" height="30">
+                    Messages</a></div>
+                <div class="menuitem" id="history"><a href="#"><img class="filter-white" src="./icons/history.svg" height="30">
+                    History</a></div>
+                <div class="menuitem" id="task"><a href="#"><img class="filter-white" src="./icons/file-multiple.svg" height="30">
+                    Tasks</a></div>
+                <div class="menuitem" id="communities"><a href="#"><img class="filter-white" src="./icons/communities.svg"
+                        height="30"> Communities</a></div>
             </div>
             <div class="bottomnav">
-                <div class="menuitem" id="settings"><img class="filter-white" src="./icons/settings.svg" height="30">
-                    Settings</div>
-                <div class="menuitem" id="support"><img class="filter-white" src="./icons/support.svg" height="30">
-                    Support</div>
-                <div class="menuitem" id="privacy"><img class="filter-white" src="./icons/privacy.svg" height="30">
-                    Privacy</div>
+                <div class="menuitem" id="settings"><a href="#"><img class="filter-white" src="./icons/settings.svg" height="30">
+                    Settings</a></div>
+                <div class="menuitem" id="support"><a href="#"><img class="filter-white" src="./icons/support.svg" height="30">
+                    Support</a></div>
+                <div class="menuitem" id="privacy"><a href="#"><img class="filter-white" src="./icons/privacy.svg" height="30">
+                    Privacy</a></div>
             </div>
         </div>
         <div class="header">
@@ -40,8 +40,8 @@
                 <div class="searchbar"></div>
             </div>
             <div class="headerright">
-                <div class="notifications"><img src="./icons/notifications.svg" height="30"></div>
-                <div class="usericon">ICON</div>
+                <div class="notifications"><a href="#"><img src="./icons/notifications.svg" height="30"></a></div>
+                <div class="usericon">ICON</a></div>
                 <div class="username">Christopher Bogs</div>
             </div>
         </div>
