--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             </div>
             <div class="headerright">
                 <div class="notifications"><a href="#"><img src="./icons/notifications.svg" height="30"></a></div>
-                <div class="usericon">ICON</a></div>
+                <div class="userinfo"><img class="usericon icon-crop" src="./icons/cbogs.jpg"></a></div>
                 <div class="username">Christopher Bogs</div>
             </div>
         </div>
-        <div class="welcome">Hi there,</div>
+        <div class="welcome"><h1>Hi there,</h1><p>Christopher Bogs (@cbogs)</p></div>
         <div class="dashboard">
             <div class="projects">
                 <div class="project-section-title">Your Projects</div>
