--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             <div class="highlights">
                 <div class="section-title">Announcements</div>
                 <div class="announcements">
-                    <div class="announcement">Site Maintenance</div>
-                    <div class="announcement">Community Share Day</div>
-                    <div class="announcement">Updated Privacy Policy</div>
+                    <div class="announcement"><h1>Site Maintenance</h1><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod tempore explicabo deleniti assumenda esse deserunt...</p></div>
+                    <div class="announcement"><h1>Community Share Day</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda voluptas asperiores dolorum provident quaerat...</p></div>
+                    <div class="announcement"><h1>Updated Privacy Policy</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aliquid cum ut cupiditate facilis amet?...</p></div>
                 </div>
                 <div class="section-title">Trending</div>
                 <div class="trending">
