Styled trending card

--- a/index.html
+++ b/index.html
@@ -114,10 +114,19 @@
                 </div>
                 <div class="section-title">Trending</div>
                 <div class="trending">
-                    <div class="trend">@tegan</div>
-                    <div class="trend">@morgan</div>
-                    <div class="trend">@kendall</div>
-                    <div class="trend">@alex</div>
+                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/cbogs.jpg"></div>
+                    <div class="trend-project"><h1>@tegan</h1><p>Mega Cool Project</p></div>
+                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/cbogs.jpg"></div>
+                    <div class="trend-project"><h1>@morgan</h1><p>Super Cool Project</p></div>
+                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/cbogs.jpg"></div>
+                    <div class="trend-project"><h1>@kendall</h1><p>Life Changing App</p></div>
+                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/cbogs.jpg"></div>
+                    <div class="trend-project"><h1>@alex</h1><p>Random Generator</p></div>
+<!-- 
+                    <div class="trend"><span class="trend-info"><h1>@tegan</h1><p>Mega Cool Project</p></span></div>
+                    <div class="trend"><img class="icon icon-crop" src="./icons/cbogs.jpg"><h1>@morgan</h1><p>Super Cool Project</p></div>
+                    <div class="trend"><img class="icon icon-crop" src="./icons/cbogs.jpg"><h1>@kendall</h1><p>Life Changing App</p></div>
+                    <div class="trend"><img class="icon icon-crop" src="./icons/cbogs.jpg"><h1>@alex</h1><p>Random Generator</p></div> -->
                 </div>
             </div>
         </div>
