Added user icons

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
                 </div>
                 <div class="section-title">Trending</div>
                 <div class="trending">
-                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/cbogs.jpg"></div>
+                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/tegan.jpg"></div>
                     <div class="trend-project"><h1>@tegan</h1><p>Mega Cool Project</p></div>
-                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/cbogs.jpg"></div>
+                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/morgan.jpg"></div>
                     <div class="trend-project"><h1>@morgan</h1><p>Super Cool Project</p></div>
-                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/cbogs.jpg"></div>
+                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/kendall.jpg"></div>
                     <div class="trend-project"><h1>@kendall</h1><p>Life Changing App</p></div>
-                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/cbogs.jpg"></div>
+                    <div class="trend-icon"><img class="icon icon-crop" src="./icons/alex.jpg"></div>
                     <div class="trend-project"><h1>@alex</h1><p>Random Generator</p></div>
 <!-- 
                     <div class="trend"><span class="trend-info"><h1>@tegan</h1><p>Mega Cool Project</p></span></div>
