--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="project-section-title">Your Projects</div>
                 <div class="projectcard">
                     <div class="project-title">Super Cool Project</div>
-                    <div class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur veniam iure dolore, vitae neque doloribus ex! Quas laborum nulla eum ea nesciunt aut fuga quam ratione ab est aperiam facilis, itaque, saepe sit maxime expedita iure sapiente amet et? Quas possimus aut ratione? Autem magni quaerat, veniam voluptas explicabo veritatis iste, consectetur nostrum praesentium eligendi repellat harum doloribus fugit quo alias molestiae ipsum voluptate. Architecto expedita nesciunt possimus praesentium iure aspernatur sequi, sint minima reprehenderit, consequatur, soluta eos ex facilis dolorum asperiores velit! Veniam, ipsa, perspiciatis dicta omnis perferendis corrupti ipsam, magni possimus autem libero a ex odio dolor quia!</div>
+                    <div class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur veniam iure dolore, vitae neque doloribus ex! Quas laborum nulla eum ea nesciunt aut fuga quam ratione ab est aperiam facilis, itaque, saepe sit maxime expedita iure sapiente amet et? Quas possimus aut ratione?</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
