--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Intensely Divisive Project</div>
-                    <div class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit minus tempora inventore pariatur omnis facilis temporibus esse distinctio sequi ullam reiciendis labore maiores, unde est voluptatibus. Excepturi dolores provident minima rem delectus obcaecati consectetur dolor alias nesciunt aliquid repellendus nisi magnam facilis, possimus sint dolore maxime sunt tempore natus inventore maiores. Alias cum unde sunt eum corrupti maiores, dolorum sequi fugit nulla odit quod et ea temporibus obcaecati suscipit. Assumenda at id obcaecati ab accusantium vitae asperiores voluptatum voluptatibus, commodi amet quos tempora nostrum enim quae odit! Nulla exercitationem beatae distinctio cumque qui. Voluptatem ratione quis officiis neque, veniam ex debitis cumque laudantium nobis? Ratione optio, molestiae repudiandae doloremque modi facilis, consequatur dolor quis a odit tempora laboriosam, aliquam perspiciatis.</div>
+                    <div class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit minus tempora inventore pariatur omnis facilis temporibus esse distinctio sequi ullam reiciendis labore maiores, unde est voluptatibus. Excepturi dolores provident minima rem delectus obcaecati consectetur dolor alias nesciunt aliquid repellendus nisi magnam facilis, possimus sint dolore maxime sunt tempore natus inventore maiores...</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
@@ -88,7 +88,7 @@
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Super Mario Brothers</div>
-                    <div class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aliquam non at numquam qui nobis corporis a eos necessitatibus sed distinctio ab voluptatem totam cumque, hic sint, molestiae unde sunt velit maxime! Repudiandae omnis ea repellat commodi magnam est sed mollitia excepturi maiores sit provident blanditiis aperiam, dolorum nemo cum tempora neque architecto natus minima aut. Consectetur porro cum aperiam. Culpa nisi odit, fugiat nostrum nam repellat laboriosam laborum hic itaque dicta eaque quis facilis enim dolor porro libero illo voluptatem nihil. Fuga ducimus laudantium voluptates dolor cumque amet voluptatem? Tempore molestias itaque ab nihil consequatur atque eius magnam voluptas esse. Assumenda non in neque qui nihil ad cumque voluptas.</div>
+                    <div class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aliquam non at numquam qui nobis corporis a eos necessitatibus sed distinctio ab voluptatem totam cumque, hic sint, molestiae unde sunt velit maxime! Repudiandae omnis ea repellat commodi magnam est sed mollitia excepturi maiores sit provident blanditiis aperiam...</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
@@ -97,7 +97,7 @@
                 </div>
                 <div class="projectcard">
                     <div class="project-title">Very Interesting Project</div>
-                    <div class="project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, veritatis quos. Iusto excepturi praesentium debitis nam, iure similique recusandae dolor explicabo commodi expedita dignissimos asperiores assumenda, delectus veniam dicta consectetur autem eius, a consequuntur nemo quas vel accusamus quisquam non! Sit iure, cumque repellendus necessitatibus optio earum natus voluptatibus rem accusantium, porro non dignissimos, laboriosam quae? Quam, quia odio. Laborum, ad molestias? Dolorem perferendis eius nostrum consequatur, doloribus voluptas porro iste ipsum enim dolores ratione nobis necessitatibus autem cumque vero dicta fuga architecto fugit distinctio similique vel impedit. Fugiat odio nihil quis asperiores rem! Sapiente adipisci numquam molestiae dolores sit cum aliquam reprehenderit, corrupti eos? Iure dolores error itaque excepturi eligendi perferendis?</div>
+                    <div class="project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, veritatis quos. Iusto excepturi praesentium debitis nam, iure similique recusandae dolor explicabo commodi expedita dignissimos asperiores assumenda, delectus veniam dicta consectetur autem eius, a consequuntur nemo quas vel accusamus quisquam non!...</div>
                     <div class="iconset">
                         <img src="./icons/favorite.svg" height="30">
                         <img src="./icons/eye-plus.svg" height="30">
